# FeedFlipNets

./: .flake8  .gitignore  .importlinter  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  UPGRADING.md  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  ternary_dfa_experiment.py
.github/ISSUE_TEMPLATE/: restructure.md
.github/workflows/: ci.yml
_design/: ARCHITECTURE_TARGET.md  MIGRATION_RUNBOOK.md  RESTRUCTURE_PLAN.md
_reports/: EXEC_SUMMARY.md  QUALITY_AUDIT.md  TRACEABILITY_MATRIX.csv
_reports/raw/: git_log_head.txt  hotspots.txt  loc_summary.txt  pip_cloc_tail.txt  pytest.txt  tree.txt
cli/: main.py
configs/presets/: 20newsgroups_bow_mlp_dfa.yaml  california_housing_mlp_dfa.yaml  mnist_mlp_dfa.yaml  ucr_gunpoint_mlp_dfa.yaml
datasets/: __init__.py  mnist.py  timeseries.py  tinystories.py  utils.py
docs/: how_to_add_dataset.md  repository_readiness_report.md  reproducibility.md
experiments/: registry.json  schema.json  ternary_dfa_experiment.py
feedflipnets/: __init__.py  models.py  train.py  utils.py
feedflipnets/core/: __init__.py  activations.py  feedback.py  np_mlp.py  quant.py  quantization.py  strategies.py  types.py
feedflipnets/data/: __init__.py  cache.py  (+8 more)
importlinter/: __init__.py  __main__.py
scripts/: bench_micro.py  build_paper_bundle.py  preset_sweep.py  smoke_datasets.sh
tests/: conftest.py  test_datasets_smoke.py  test_experiment.py  test_pipeline.py  test_pipeline_structured_smoke.py  test_structured_feedback.py  test_training_loops.py
(+36 files in other folders)
