[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "feedflipnets"
version = "1.0.0-rc1"
description = "Research implementation of Ternary DFA experiments"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Researcher" }]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scikit-learn"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
py-modules = ["ternary_dfa_experiment"]

[tool.setuptools.packages.find]
include = ["feedflipnets", "feedflipnets.*", "cli", "cli.*"]
