[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "feedflipnets"
version = "1.0.0-rc1"
description = "Research implementation of Ternary DFA experiments"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Researcher" }]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "flake8",
    "isort",
    "pre-commit",
]

[tool.setuptools]
py-modules = ["ternary_dfa_experiment"]

[tool.black]
line-length = 100
target-version = ["py310"]
